----------------------
Version 1.2.1 -> 1.3.0 (dev)
----------------------
New Features
- Jabber Registration

Bug Fixes
- 

----------------------
Version 1.2.0 -> 1.2.1
----------------------
New Features
- EVE Avatar size is now selectable under administrator settings
- Full member Check now limits to 50 per run and cycles, Cron has built in time manager
- TS Section now works with API area disabled (good for none eve use)
- Online reg Method for TS now removes old Accounts
- You can now Alter permissions for viewing and editing API Page
- Full Check now runs with a limit of 25 Seconds, and auto Refreshes if Manual
- You can now Get an Update by Clicking Download under TEA Admin info page
- Added Custom Format for adding tags to Name or title
- Main Character now Auto Selects when adding first API under profile

Bug Fixes
- Fixed Bug with Character Selection on Profile Were if you had no API then you couldnt add 1 (Fix by monorailpilot)
- Added a command during install of package to chmod the xmlhttp file
- Fixed undefined errors due to missing skills in TEA_SkillDump.php
- Added excape for Javascript variable for when people use ' in rule names
- Fixed Error where actual user groups was used and not selected user for TS reg
- Fixed issue with overlapping copyright
- Fixed but were main character selection under TS always used default format
- Fixed a bunch of undefined errors including the one in crons
- Name to Reg and Check in TS is now Shortened to 30 if longer
- Removed Corp Description as some can Break XML
- Fixed a bug causing error when no titles found
- Fixed issue with tea function being called in other areas of profile

----------------------
Version 1.1.2 -> 1.2.0
----------------------
New Features
- TeamSpeak 3 Support, This includes Registering via User uniqueKey or being on the server and having it find you
  Also Maintains users Access, will smf and Ts group linking, and can enforce nicknames