@@ -4,7 +4,7 @@
 	<id>temar:TEA</id>
 	<name>Temars EVE API</name>
 	<type>modification</type>
-	<version>1.3.0 r159</version>
+	<version>1.3.0 r160</version>
 	<install for="1.1 - 1.1.99">
 		<readme type="file">readme.txt</readme>
 		<readme type="inline" parsebbc="true">[color=red]Error! This mod does not support your version of SMF.[/color]</readme>
@@ -25,15 +25,12 @@
 		<require-file name="TEA_TS.php" destination="$sourcedir" />
 		<require-file name="TEA_Jabber.php" destination="$sourcedir" />
 		<require-file name="TEA_Jabber_OF.php" destination="$sourcedir" />
-		<require-file name="TEA_Cron.php" destination="$sourcedir" />
-		<require-file name="TEA_TS_Cron_Access.php" destination="$sourcedir" />
-		<require-file name="TEA_TS_Cron_Names.php" destination="$sourcedir" />
-		<require-file name="TEA_xmlhttp.php" destination="$boarddir" />
 		<require-file name="TEA_SkillDump.php" destination="$sourcedir" />
 		<require-file name="TEA_Roles.php" destination="$sourcedir" />
 		<require-file name="TEA.english.php" destination="$languagedir" />
 		<require-file name="tea.gif" destination="$imagesdir/admin" />
 		<require-file name="esam_upgrade.php" destination="$boarddir" />
+		<require-dir name="TEA" destination="$boarddir" />
 		<require-dir name="TS3_Class" destination="$sourcedir" />
 		<code>tables.php</code>
 		<remove-file name="$boarddir/esam_upgrade.php" />
@@ -55,15 +52,12 @@
 		<require-file name="TEA_TS.php" destination="$sourcedir" />
 		<require-file name="TEA_Jabber.php" destination="$sourcedir" />
 		<require-file name="TEA_Jabber_OF.php" destination="$sourcedir" />
-		<require-file name="TEA_Cron.php" destination="$sourcedir" />
-		<require-file name="TEA_TS_Cron_Access.php" destination="$sourcedir" />
-		<require-file name="TEA_TS_Cron_Names.php" destination="$sourcedir" />
-		<require-file name="TEA_xmlhttp.php" destination="$boarddir" />
 		<require-file name="TEA_SkillDump.php" destination="$sourcedir" />
 		<require-file name="TEA_Roles.php" destination="$sourcedir" />
 		<require-file name="TEA.english.php" destination="$languagedir" />
 		<require-file name="tea.gif" destination="$imagesdir/admin" />
 		<require-file name="esam_upgrade.php" destination="$boarddir" />
+		<require-dir name="TEA" destination="$boarddir" />
 		<require-dir name="TS3_Class" destination="$sourcedir" />
 		<code>tables.php</code>
 		<remove-file name="$boarddir/esam_upgrade.php" />
@@ -84,17 +78,14 @@
 		<remove-file name="$sourcedir/TEA_TS.php" />
 		<remove-file name="$sourcedir/TEA_Jabber.php" />
 		<remove-file name="$sourcedir/TEA_Jabber_OF.php" />
-		<remove-file name="$sourcedir/TEA_Cron.php" />
-		<remove-file name="$sourcedir/TEA_TS_Cron_Access.php" />
-		<remove-file name="$sourcedir/TEA_TS_Cron_Names.php" />
-		<remove-file name="$sourcedir/TEA_xmlhttp.php" />
 		<remove-file name="$boarddir/TEA_xmlhttp.php" />
 		<remove-file name="$sourcedir/TEA_Roles.php" />
 		<remove-file name="$sourcedir/TEA_SkillDump.php" />
 		<remove-file name="$languagedir/TEA.english.php" />
 		<remove-file name="$imagesdir/admin/tea.gif" />
 		<remove-file name="$boarddir/esam_upgrade.php" />
-		<remove-die name="$sourcedir/TS3_Class" />
+		<remove-dir name="$boarddir/TEA" />
+		<remove-dir name="$sourcedir/TS3_Class" />
 	</uninstall>
 	<upgrade from="1.3.0 r155">
 		<readme type="file">readme.txt</readme>
@@ -103,13 +94,10 @@
 		<require-file name="TEA_TS.php" destination="$sourcedir" />
 		<require-file name="TEA_Jabber.php" destination="$sourcedir" />
 		<require-file name="TEA_Jabber_OF.php" destination="$sourcedir" />
-		<require-file name="TEA_Cron.php" destination="$sourcedir" />
-		<require-file name="TEA_TS_Cron_Access.php" destination="$sourcedir" />
-		<require-file name="TEA_TS_Cron_Names.php" destination="$sourcedir" />
-		<require-file name="TEA_xmlhttp.php" destination="$boarddir" />
 		<require-file name="TEA_SkillDump.php" destination="$sourcedir" />
 		<require-file name="TEA_Roles.php" destination="$sourcedir" />
 		<require-file name="TEA.english.php" destination="$languagedir" />
+		<require-dir name="TEA" destination="$boarddir" />
 		<require-dir name="TS3_Class" destination="$sourcedir" />
 		<code>tables.php</code>
 	</upgrade>
